# bwtools

./: .gitignore  AGENTS.md  README.md  requirements.txt
.handover/: 2026-04-23.md  2026-04-24-bwtools-api.md  2026-04-24-codex-router-wrappers.md  2026-04-27-codex-auth-register-login.md  2026-04-30-abandonment.md
bwagent-support/: README.md  UPSTREAM.txt  requirements.txt
bwkit/: README.md  pyproject.toml
bwkit/src/bwkit/: __init__.py  catalog.yaml  cli.py
bwkit/src/bwkit/core/: config.py  creds.py  errors.py  metrics.py  registry.py  runner.py  spec.py
bwkit/src/bwkit/tools/: __init__.py  markitdown.py
bwkit/src/bwkit/transports/: mcp_stdio.py
bwkit/tests/: conftest.py  test_config_overrides.py  test_creds.py  test_markitdown.py  test_mcp_stdio.py  test_metrics.py  test_registry.py  test_runner.py
bwtools-api/: README.md  UPSTREAM.txt  pyproject.toml  requirements.txt
bwtools-api/src/bwtools_api/: __init__.py  bwagent.py  cli.py  paths.py  server.py  tools.py
codex-auth-register-login/: .gitignore  LICENSE  README.md  UPSTREAM.txt  account_registrar.py  accounts_sample.csv  bridge_reply.py  selectors.json
codex-auth-register-login/tests/: test_account_registrar.py
codex-router/: README.md  UPSTREAM.txt  requirements.txt
codex-router/sidecar/: README.md
markitdown/: README.md  UPSTREAM.txt  requirements-all.txt  requirements.txt
yt-transcripts/: README.md  requirements.txt
