[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bwtools-api"
version = "0.1.0"
description = "First-party local API and CLI surface for bwtools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Bach" },
]

[project.scripts]
bwtools = "bwtools_api.cli:main"
bwtools-api = "bwtools_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
